crates/solidity/testing/snapshots/bindings_output/using/elementary_arrays/generated/0.7.4-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or ContractKeyword or EnumKeyword or FixedKeyword or FunctionKeyword or Identifier or ImportKeyword or IntKeyword or InterfaceKeyword or LibraryKeyword or MappingKeyword or PragmaKeyword or StringKeyword or StructKeyword or UfixedKeyword or UintKeyword.
   ╭─[input.sol:3:1]
   │
 3 │ ╭─▶ using {sum} for uint[];
   ┆ ┆   
 7 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ function sum(uint[] memory values) returns (uint) {}
   │          ─┬─               ───┬──  
   │           ╰──────────────────────── def: 1
   │                               │    
   │                               ╰──── def: 2
───╯
